--- a/Portfolio/Pp.css
+++ b/Portfolio/Pp.css
@@ -16,6 +16,7 @@
     --second-bg-color: #323946;
     --text-color: #fff;
     --main-color: #0ef;
+    --color-1: #00eeffad;
     --html: 90%;
     --css: 80%;
     --javascript: 60%;
@@ -31,7 +32,6 @@ html {
 body {
     background: var(--bg-color);
     color: var(--text-color);
-    scroll-behavior: smooth;
 }
 
 .header {
@@ -59,11 +59,18 @@ body {
     cursor: default;
 }
 
+nav ul li {
+    list-style: none;
+}
+
+nav ul {
+    display: flex;
+}
+
 .navbar a {
     font-size: 1.9em;
     color: var(--text-color);
     font-weight: 500;
-    cursor: default;
     text-shadow: #1f242d;
     margin-left: 4rem;
     transition: .3s;
@@ -72,6 +79,15 @@ body {
 .navbar a:hover,
 .navbar a.active {
     color: var(--second-bg-color);
+}
+.close{
+    display: none;
+    position: absolute;
+    z-index: 999;
+    color: white;
+    font-size: 4rem;
+    right: 4vw;
+    cursor: pointer;
 }
 
 #menu-icon {
@@ -122,7 +138,7 @@ img {
     line-height: 1.3;
 }
 
-span {
+.intro {
     color: var(--main-color);
 }
 
@@ -225,14 +241,20 @@ h3 {
     float: left;
     background: linear-gradient(135deg, rgba(236, 0, 140, 1)0%, rgba(252, 103, 103, 1)100%);
 }
-.skills li h3 span{
+
+.skills li h3 span {
     text-align: right;
 }
 
-.html, .css, .javascript, .php, .reactjs {
+.html,
+.css,
+.javascript,
+.php,
+.reactjs {
     animation: skills 3s;
     animation-play-state: paused;
 }
+
 .html {
     width: var(--html);
 }
@@ -253,7 +275,7 @@ h3 {
     width: var(--reactjs);
 }
 
-@keyframes skills{
+@keyframes skills {
     0% {
         width: 0%;
     }
@@ -409,20 +431,49 @@ h3 {
     }
 
     .navbar {
-        position: absolute;
-        top: 100%;
+        position: fixed;
+        top: 0;
+        right: 0;
+        bottom: 0;
         left: 0;
         width: 100%;
         padding: 1rem 3%;
         background: var(--bg-color);
-        border-top: .1rem solid rgba(0, 0, 0, .2);
-        box-shadow: 0.5rem 1rem rgba(0, 0, 0, .2);
+        display: none;
+    }
+
+    nav ul {
+        position: absolute;
+        top: calc(8vw + 3rem);
+        bottom: 4vw;
+        left: 4vw;
+        right: 4vw;
+        z-index: 9;
+        background-color: var(--main-color);
+        border-radius: 2rem;
+        padding: 2rem;
+        display: grid;
+        grid-template-columns: 1fr;
+        place-items: center;
+        overflow: scroll;
+    }
+
+    nav a:hover{
+        text-decoration: underline;
+    }
+
+    nav ul::-webkit-scrollbar {
         display: none;
     }
 
     .mobilenavbar {
-        background-color: #dcdcdc;
         display: block;
+    }
+    .show{
+        display: block;
+    }
+    .hide{
+        display: none;
     }
 
     .about {
@@ -436,6 +487,7 @@ h3 {
     .footer>* {
         margin: 5px;
     }
+
     .footer-icon a i {
         font-size: 30px;
     }
